# GeometryFramework

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/Cubic_Stylization/: CMakeLists.txt  main.cpp
examples/Geodesic_Path/: CMakeLists.txt  main.cpp
examples/Local-Global_Parameterization/: CMakeLists.txt  main.cpp
examples/QEM_Simplification/: CMakeLists.txt  main.cpp
examples/Spectral_Simplification/: CMakeLists.txt  main.cpp
include/: GLMesh.h  GeometryProcessing.h  Mesh.h  PointCloud.h  Scene.h  Shader.h  Window.h
include/Renderer/: GLMesh.h  Scene.h  Window.h
include/Utils/: TickTock.h
shaders/: basic.vert
src/: GLMesh.cpp  Mesh.cpp  PSR.cpp  QEM.cpp  Scene.cpp  Shader.cpp  main.cpp
src/GeometryProcessing/: LGP.cpp  PSR.cpp  QEM.cpp  cubic_stylization.cpp  geodesic_path.cpp  local_global.cpp  poisson_recon.cpp  qem_simp.cpp  spectral_simp.cpp
